mongodeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongodb:latest
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "200m"
            memory: "1Gi"
        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db
      volumes:
      - name: mongodb-storage 
        persistentVolumeClaim:
          claimName: 'mongodb-pvc'

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec: 
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
